# codeql

./: Cargo.toml  MODULE.bazel
.github/: labeler.yml
.github/workflows/: buildifier.yml  check-implicit-this.yml  check-overlay-annotations.yml  check-qldoc.yml  check-query-ids.yml  close-stale.yml  codeql-analysis.yml  compile-queries.yml  cpp-swift-analysis.yml  csharp-qltest.yml  csv-coverage-metrics.yml  csv-coverage-pr-artifacts.yml  csv-coverage-pr-comment.yml  csv-coverage-timeseries.yml  csv-coverage-update.yml  csv-coverage.yml  fast-forward.yml  go-tests.yml  go-version-update.yml  kotlin-build.yml  labeler.yml  mad_modelDiff.yml  mad_regenerate-models.yml  python-tooling.yml  qhelp-pr-preview.yml  ql-for-ql-build.yml  ql-for-ql-dataset_measure.yml  ql-for-ql-tests.yml  query-list.yml  ruby-build.yml  ruby-dataset-measure.yml  rust-analysis.yml  rust.yml  swift.yml  sync-files.yml  tree-sitter-extractor-test.yml  validate-change-notes.yml  zipmerge-test.yml
actions/ql/lib/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
actions/ql/lib/change-notes/: 2026-07-09-environment-check-alteration.md
actions/ql/src/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
cpp/ql/lib/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
cpp/ql/src/: CHANGELOG.md  qlpack.yml
cpp/ql/src/Critical/: NewFreeMismatch.ql
cpp/ql/src/change-notes/: 2026-07-09-CWE-114.md  2026-07-13-new-free.md
csharp/extractor/Semmle.Extraction.CSharp/Entities/: Field.cs  (+2 more)
csharp/ql/lib/: CHANGELOG.md  qlpack.yml
csharp/ql/src/: CHANGELOG.md  qlpack.yml
docs/codeql/codeql-language-guides/: customizing-library-models-for-java-and-kotlin.rst
docs/codeql/reusables/: supported-versions-compilers.rst
go/actions/test/: action.yml
go/downgrades/5ff5325d274ae4f86defa195577bc7c1370b72fa/: old.dbscheme  typeparam.ql
go/extractor/: extractor.go  go.mod  go.sum
go/extractor/dbscheme/: dbscheme.go  tables.go
go/extractor/trap/: trapwriter.go
go/ql/consistency-queries/: qlpack.yml
go/ql/lib/: CHANGELOG.md  codeql-pack.release.yml  go.dbscheme.stats  qlpack.yml
go/ql/src/: CHANGELOG.md  qlpack.yml
java/documentation/library-coverage/: coverage.csv  coverage.rst
java/kotlin-extractor/: BUILD.bazel
java/kotlin-extractor/dev/: wrapper.py
java/ql/lib/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
java/ql/src/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
javascript/ql/lib/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
javascript/ql/src/: CHANGELOG.md  qlpack.yml
misc/codegen/: requirements_lock.txt
misc/suite-helpers/: CHANGELOG.md  qlpack.yml
python/ql/lib/: CHANGELOG.md  qlpack.yml
python/ql/src/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
ql/buramu/: Cargo.toml
ql/extractor/: Cargo.toml
ruby/ql/lib/: CHANGELOG.md  qlpack.yml
ruby/ql/src/: CHANGELOG.md  qlpack.yml
rust/ql/lib/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
rust/ql/src/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
shared/concepts/: CHANGELOG.md  qlpack.yml
shared/controlflow/: CHANGELOG.md  qlpack.yml
shared/dataflow/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
shared/mad/: CHANGELOG.md  qlpack.yml
shared/namebinding/: qlpack.yml
shared/quantum/: qlpack.yml
shared/rangeanalysis/: CHANGELOG.md  qlpack.yml
shared/regex/: CHANGELOG.md  qlpack.yml
shared/ssa/: CHANGELOG.md  qlpack.yml
shared/threat-models/: CHANGELOG.md  qlpack.yml
shared/tree-sitter-extractor/: Cargo.toml
shared/tutorial/: CHANGELOG.md  qlpack.yml
shared/typeflow/: CHANGELOG.md  qlpack.yml
shared/typeinference/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
shared/typetracking/: CHANGELOG.md  qlpack.yml
shared/typos/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
shared/util/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
shared/xml/: CHANGELOG.md  qlpack.yml
shared/yaml/: CHANGELOG.md  qlpack.yml
shared/yeast/: BUILD.bazel  Cargo.toml
shared/yeast-macros/src/: lib.rs  parse.rs
shared/yeast-schema/: BUILD.bazel  Cargo.toml
shared/yeast-schema/src/: lib.rs  node_types_yaml.rs  schema.rs
shared/yeast/doc/: yeast.md
shared/yeast/src/: build.rs  lib.rs  node_types_yaml.rs  query.rs  range.rs  schema.rs
shared/yeast/tests/: input-types.yml  test.rs
swift/extractor/translators/: DeclTranslator.cpp
swift/ql/lib/: CHANGELOG.md  codeql-pack.release.yml  qlpack.yml
swift/ql/src/: CHANGELOG.md  qlpack.yml
swift/swift-autobuilder/: BuildRunner.cpp
unified/extractor/tests/: rules_macro_smoke.rs  swift_syntax_pipeline.rs
unified/ql/lib/: qlpack.yml  unified.qll
unified/swift-syntax-rs/: .gitignore  BUILD.bazel  Cargo.toml  README.md  build.rs  swift_runtime.bzl  xcode_transition.bzl
unified/swift-syntax-rs/src/: lib.rs  main.rs  yeast_adapter.rs
unified/swift-syntax-rs/swift/: Package.resolved  Package.swift
unified/swift-syntax-rs/swift/Sources/SwiftSyntaxFFI/: SwiftSyntaxFFI.swift
(+1213 files in other folders)
