load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load(":xcode_transition.bzl", "xcode_transition_swift_library")

package(default_visibility = ["//visibility:public"])

# Targets in this package require a Swift toolchain (Linux or macOS).
# `select()` gives us OR-of-OSes; other platforms get marked incompatible
# so `bazel build/test //...` skips them cleanly.
#
_SWIFT_SUPPORTED_PLATFORMS = select({
    "@platforms//os:linux": [],
    "@platforms//os:macos": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

# Swift FFI shim: wraps swift-syntax and exposes a small C ABI. The Rust
# targets below link against its `CcInfo`.
xcode_transition_swift_library(
    name = "swift_syntax_ffi",
    srcs = ["swift/Sources/SwiftSyntaxFFI/SwiftSyntaxFFI.swift"],
    module_name = "SwiftSyntaxFFI",
    target_compatible_with = _SWIFT_SUPPORTED_PLATFORMS,
    deps = [
        "@swift-syntax//:SwiftParser",
        "@swift-syntax//:SwiftSyntax",
    ],
)

# Safe Rust bindings on top of the C ABI. Under Bazel the Swift side comes
# from `:swift_syntax_ffi`; `build.rs` is only used by the `cargo` workflow.
rust_library(
    name = "swift_syntax_rs",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    edition = "2024",
    target_compatible_with = _SWIFT_SUPPORTED_PLATFORMS,
    deps = [
        ":swift_syntax_ffi",
    ],
)

rust_binary(
    name = "swift-syntax-parse",
    srcs = ["src/main.rs"],
    # `rust_binary` doesn't copy the Swift runtime into runfiles the way
    # `swift_binary` does. On Linux, ship the standalone toolchain's runtime;
    # on macOS the OS provides it at `/usr/lib/swift` (rpath'd by
    # `xcode_swift_toolchain`).
    data = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": ["@swift_toolchain_ubuntu24.04//:files"],
    }),
    edition = "2024",
    target_compatible_with = _SWIFT_SUPPORTED_PLATFORMS,
    deps = [":swift_syntax_rs"],
)

rust_test(
    name = "swift_syntax_rs_test",
    size = "small",
    crate = ":swift_syntax_rs",
    data = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": ["@swift_toolchain_ubuntu24.04//:files"],
    }),
    edition = "2024",
    target_compatible_with = _SWIFT_SUPPORTED_PLATFORMS,
)
